--- a/project7/editorial.html
+++ b/project7/editorial.html
@@ -28,10 +28,10 @@
         .editorial, .footer{font-family: 'Lato', sans-serif;}
         @media only screen and (max-width: 800px) 
     { 
-        .nav a{max-width:100%; display: flex; float: center; background-color: aliceblue; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; }
+        .nav a{max-width:100%; display: flex; background-color: aliceblue; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; }
         .blurb{text-align: right; flex-wrap: wrap;}
         .name {text-align: right; flex-wrap: wrap;}
-        .footer{max-width:100%; display: flex; float: center; flex-wrap: wrap;}
+        .footer{max-width:100%; display: flex;  flex-wrap: wrap;}
         span {display: none;}
         .editorial{display: grid; grid-template-columns: 100%}
         .grid-item {padding: 20px;font-size: 15px; text-align: center;}
@@ -59,7 +59,6 @@
                 <a href="https://www.theodysseyonline.com/user/@taylor_huang"><img src="../project/pictures/odyssey.png" alt ="odyssey"></a><br>
             <p>During the summer of 2020, I was a Lifestyle Beat Creator for the Odyssey Online. I worked closely with the Lifestyle Editor to create engaging, informative written content for audiences. At the end of this program, I generated upwards of 220,000 views on my content, which consisted of product reviews, listicles, and food items.</p></div>
                 </div>
-        </div>
 
         <footer>
             <div class="footer">
