--- a/project7/home.html
+++ b/project7/home.html
@@ -12,7 +12,7 @@
         .nav {float: right;}
         .heading1 {float: right; display: flex; text-align: right;}
        /* .paragraph {float: right; display: flex; text-align: right;}*/
-       .end{max-width:100%; display: flex; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; float: center; flex-wrap: wrap;}
+       .end{max-width:100%; display: flex; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; flex-wrap: wrap;}
         .letsconnect{text-align: left; margin: 150px}
         .contact{text-align: center; margin: 150px;}
         .social-links{text-align: right; margin: 150px;}
@@ -25,13 +25,13 @@
 
         @media only screen and (max-width: 1250px) 
     { 
-        .nav a{max-width:100%; display: flex; float: center; background-color: aliceblue; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; }
+        .nav a{max-width:100%; display: flex; background-color: aliceblue; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; }
         .name{text-align: right; flex-wrap: wrap;}
         span {display: none;}
         img a{max-width: 100%;}
         .blurb{text-align: right; flex-wrap: wrap; padding: 80px;}
-        .name {max-width:100%; float: center; display: flex; flex-wrap: wrap;}
-        .end{max-width:100%; display: flex; float: center; flex-wrap: wrap;}
+        .name {max-width:100%; display: flex; flex-wrap: wrap;}
+        .end{max-width:100%; display: flex; flex-wrap: wrap;}
     }
     </style>
 </head>
