--- a/project7/technical.html
+++ b/project7/technical.html
@@ -19,15 +19,15 @@
         .jobs {display: flex; flex-wrap: wrap}
         /*.tern {display: flex; flex-wrap: wrap}*/
         .jobs {display: inline-grid; column-gap: 80px; grid-template-columns: 250px auto;}
-        .grid-item {padding: 20px;font-size: 20px; text-align: center; float: center;}
+        .grid-item {padding: 20px;font-size: 20px; text-align: center;}
         .jobs {font-family: 'Lato', sans-serif;}
 
         @media only screen and (max-width: 600px) 
     { 
-        .nav a{max-width:100%; display: flex; float: center; background-color: aliceblue; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; }
+        .nav a{max-width:100%; display: flex; background-color: aliceblue; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; }
         .blurb{text-align: right; flex-wrap: wrap;}
         .name {text-align: right; flex-wrap: wrap;}
-        .footer{max-width:100%; display: flex; float: center; flex-wrap: wrap;}
+        .footer{max-width:100%; display: flex; flex-wrap: wrap;}
         span {display: none;}
         .jobs{display: inline-grid; flex-wrap: wrap;}
     }
@@ -73,7 +73,6 @@
     <h1>Youth Outreach Plan</h1><br></div>
     <div class="grid-item"><p>During the summer of 2019, I was an intern for New York State Senator John C. Liu. Working together with my fellow interns, we designed a Youth Outreach Plan to engage young people in the community through social media, events, and merchandise sales. We then used Google Analytics to measure the success of our ideas and pitched our plan to the senator himself.</p><br>
     </div> 
-    </div>
     </div>
 
     <footer>
