--- a/project7/editorial.html
+++ b/project7/editorial.html
@@ -26,6 +26,9 @@
         .social-links{float: right; margin: 150px}
         .img a{max-width: 100%; max-height: 100%;}
         .editorial, .footer{font-family: 'Lato', sans-serif;}
+        .mashed{background-color: #C7395F; color: #DED4E8; padding: 10px}
+        .hercampus{background-color: #DED4E8; color: #E8BA40; padding: 10px}
+        .odyssey{background-color: #E8BA40; color: #C7395F; padding: 10px}
         @media only screen and (max-width: 800px) 
     { 
         .nav a{max-width:100%; display: flex; background-color: aliceblue; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; }
@@ -50,14 +53,17 @@
 
         <div class="editorial">
             <div class="grid-item">
+                <div class="mashed">
             <a href="https://www.mashed.com/author/taylorhuang/"><img src="../project/pictures/mashed.png" alt ="mashed" ></a><br>
-            <p>I am currently a writer at Mashed.com, an online food publication. I am assigned stories and forward pitches to editors on a regular basis. I have covered a large variety of topics, including Crumbl Cookies’ newest podcast to what Shaq really eats in a day. However, my favorite things to write about include plant-based cooking and food tech!</p></div>
+            <p>I am currently a writer at Mashed.com, an online food publication. I am assigned stories and forward pitches to editors on a regular basis. I have covered a large variety of topics, including Crumbl Cookies’ newest podcast to what Shaq really eats in a day. However, my favorite things to write about include plant-based cooking and food tech!</p></div></div>
             <div class="grid-item"> 
+                <div class="hercampus">
                 <a href="https://www.hercampus.com/author/taylor-huang/"><img src="../project/pictures/hercampusmedia.png" alt ="hercampus"></a><br>
-            <p>I was previously an intern for Her Campus Media, where I worked extensively on Lifestyle and Wellness articles. I also led the publications “Behind the Feed” series for a period, where I organized social media influencers stories.</p></div>
+            <p>I was previously an intern for Her Campus Media, where I worked extensively on Lifestyle and Wellness articles. I also led the publications “Behind the Feed” series for a period, where I organized social media influencers stories.</p></div></div>
             <div class="grid-item">
+                <div class="odyssey">
                 <a href="https://www.theodysseyonline.com/user/@taylor_huang"><img src="../project/pictures/odyssey.png" alt ="odyssey"></a><br>
-            <p>During the summer of 2020, I was a Lifestyle Beat Creator for the Odyssey Online. I worked closely with the Lifestyle Editor to create engaging, informative written content for audiences. At the end of this program, I generated upwards of 220,000 views on my content, which consisted of product reviews, listicles, and food items.</p></div>
+            <p>During the summer of 2020, I was a Lifestyle Beat Creator for the Odyssey Online. I worked closely with the Lifestyle Editor to create engaging, informative written content for audiences. At the end of this program, I generated upwards of 220,000 views on my content, which consisted of product reviews, listicles, and food items.</p></div></div>
                 </div>
 
         <footer>
