--- a/project7/home.html
+++ b/project7/home.html
@@ -18,7 +18,7 @@
         .social-links{text-align: right; margin: 150px;}
         .banner {max-width: 100%;}
         .blurb {display: inline-grid; grid-template-columns: 50% 50%}
-        .grid-item {padding: 20px;font-size: 15px; text-align: center;}
+        .grid-item {padding: 20px;font-size: 15px; text-align: center; background-color: #cce5ff; padding: 10px; }
         .name {text-align: right; flex-wrap: wrap;}
         .paragraph {text-align: right;}
         h1, .blurb, .end{font-family: 'Lato', sans-serif;}
