--- a/project7/technical.html
+++ b/project7/technical.html
@@ -21,12 +21,12 @@
         .jobs {display: inline-grid; grid-template-columns: 50% 50%;}
         .grid-item {padding: 20px;font-size: 20px; text-align: center;}
         .jobs {font-family: 'Lato', sans-serif;}
-        .tern{background-color: #C7395F; color: #DED4E8; padding: 10px}
-        .thursdayboots{background-color: #DED4E8; color: #E8BA40; padding: 10px}
-        .syracuse{background-color: #E8BA40; color: #C7395F; padding: 10px}
-        .genwealthbuilders{background-color: #C7395F; color: #DED4E8; padding: 10px}
-        .itemize{background-color: #DED4E8; color: #E8BA40; padding: 10px}
-        .youthoutreachplan{background-color: #E8BA40; color: #C7395F; padding: 10px}
+        .tern{background-color: #B2456E; color: #FBEAE7; padding: 10px}
+        .thursdayboots{background-color: #FBEAE7; color: #552619; padding: 10px}
+        .syracuse{background-color: #552619; color: #B2456E; padding: 10px}
+        .genwealthbuilders{background-color: #B2456E; color: #FBEAE7; padding: 10px}
+        .itemize{background-color: #FBEAE7; color: #552619; padding: 10px}
+        .youthoutreachplan{background-color: #552619; color: #B2456E; padding: 10px}
 
         @media only screen and (max-width: 600px) 
     { 
