--- a/project7/technical.html
+++ b/project7/technical.html
@@ -23,10 +23,10 @@
         .jobs {font-family: 'Lato', sans-serif;}
         .tern{background-color: #B2456E; color: #FBEAE7; padding: 10px}
         .thursdayboots{background-color: #FBEAE7; color: #552619; padding: 10px}
-        .syracuse{background-color: #552619; color: #B2456E; padding: 10px}
+        .syracuse{background-color: #552619; color: #FBEAE7; padding: 10px}
         .genwealthbuilders{background-color: #B2456E; color: #FBEAE7; padding: 10px}
         .itemize{background-color: #FBEAE7; color: #552619; padding: 10px}
-        .youthoutreachplan{background-color: #552619; color: #B2456E; padding: 10px}
+        .youthoutreachplan{background-color: #552619; color:  #FBEAE7; padding: 10px}
 
         @media only screen and (max-width: 600px) 
     { 
