--- a/project7/editorial.html
+++ b/project7/editorial.html
@@ -26,12 +26,12 @@
         .social-links{float: right; margin: 150px}
         .img a{max-width: 100%; max-height: 100%;}
         .editorial, .footer{font-family: 'Lato', sans-serif;}
-        .mashed{background-color: #C7395F; color: #DED4E8; padding: 10px}
-        .hercampus{background-color: #DED4E8; color: #E8BA40; padding: 10px}
-        .odyssey{background-color: #E8BA40; color: #C7395F; padding: 10px}
+        .mashed{background-color: #B2456E; color: #FBEAE7; padding: 10px}
+        .hercampus{background-color:  #FBEAE7; color: #552619; padding: 10px}
+        .odyssey{background-color: #552619; color: #FBEAE7; padding: 10px}
         @media only screen and (max-width: 800px) 
     { 
-        .nav a{max-width:100%; display: flex; background-color: aliceblue; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; }
+        .nav a{max-width:100%; display: flex; background-color: #FBEAE7; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; }
         .blurb{text-align: right; flex-wrap: wrap;}
         .name {text-align: right; flex-wrap: wrap;}
         .footer{max-width:100%; display: flex;  flex-wrap: wrap;}
