--- a/project7/home.html
+++ b/project7/home.html
@@ -18,14 +18,14 @@
         .social-links{text-align: right; margin: 150px;}
         .banner {max-width: 100%;}
         .blurb {display: inline-grid; grid-template-columns: 50% 50%}
-        .grid-item {padding: 20px;font-size: 15px; text-align: center; background-color: #cce5ff; padding: 10px; }
+        .grid-item {padding: 20px;font-size: 15px; text-align: center; background-color: #FBEAE7; padding: 10px; }
         .name {text-align: right; flex-wrap: wrap;}
         .paragraph {text-align: right;}
         h1, .blurb, .end{font-family: 'Lato', sans-serif;}
 
         @media only screen and (max-width: 1250px) 
     { 
-        .nav a{max-width:100%; display: flex; background-color: aliceblue; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; }
+        .nav a{max-width:100%; display: flex; background-color: #FBEAE7; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; }
         .name{text-align: right; flex-wrap: wrap;}
         span {display: none;}
         img a{max-width: 100%;}
