--- a/project7/technical.html
+++ b/project7/technical.html
@@ -30,7 +30,7 @@
 
         @media only screen and (max-width: 600px) 
     { 
-        .nav a{max-width:100%; display: flex; background-color: aliceblue; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; }
+        .nav a{max-width:100%; display: flex; background-color:  #FBEAE7; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; }
         .blurb{text-align: right; flex-wrap: wrap;}
         .name {text-align: right; flex-wrap: wrap;}
         .footer{max-width:100%; display: flex; flex-wrap: wrap;}
