--- a/project7/editorial.html
+++ b/project7/editorial.html
@@ -29,7 +29,7 @@
         .mashed{background-color: #B2456E; color: #FBEAE7; padding: 10px}
         .hercampus{background-color:  #FBEAE7; color: #552619; padding: 10px}
         .odyssey{background-color: #552619; color: #FBEAE7; padding: 10px}
-        @media only screen and (max-width: 600px) 
+        @media only screen and (max-width: 1000px) 
     { 
         .nav a{max-width:100%; display: flex; background-color: #FBEAE7; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; }
         .blurb{text-align: right; flex-wrap: wrap;}
@@ -37,7 +37,7 @@
         .footer{max-width:100%; display: flex;  flex-wrap: wrap;}
         span {display: none;}
         .editorial{display: grid; grid-template-columns: 100%}
-        .grid-item {padding: 20px;font-size: 15px; text-align: center;}
+        .grid-item {padding: 20px;font-size: 15px; text-align: center; display: inline-grid; flex-wrap: wrap;}
     }
     </style>
 </head>
