--- a/project7/editorial.html
+++ b/project7/editorial.html
@@ -36,7 +36,7 @@
         .name {text-align: right; flex-wrap: wrap;}
         .footer{max-width:100%; display: flex;  flex-wrap: wrap;}
         span {display: none;}
-        .editorial{display: grid; grid-template-columns: 100%}
+        .editorial{display: grid; grid-template-columns: 100%; display: inline-grid; flex-wrap: wrap;}
         /*.grid-item {padding: 20px;font-size: 15px; text-align: center; display: inline-grid; flex-wrap: wrap;}*/
     }
     </style>
