--- a/project7/editorial.html
+++ b/project7/editorial.html
@@ -25,7 +25,7 @@
         .contact{text-align: center; margin: 150px}
         .social-links{float: right; margin: 150px}
         .img a{max-width: 100%; max-height: 100%;}
-        .editorial, .footer{font-family: 'Lato', sans-serif;}
+        .editorial, .footer, .nav{font-family: 'Lato', sans-serif;}
         .mashed{background-color: #B2456E; color: #FBEAE7; padding: 10px}
         .hercampus{background-color:  #FBEAE7; color: #552619; padding: 10px}
         .odyssey{background-color: #552619; color: #FBEAE7; padding: 10px}
