--- a/project7/technical.html
+++ b/project7/technical.html
@@ -20,7 +20,7 @@
         /*.tern {display: flex; flex-wrap: wrap}*/
         .jobs {display: inline-grid; grid-template-columns: 50% 50%;}
         .grid-item {padding: 20px;font-size: 20px; text-align: center;}
-        .jobs {font-family: 'Lato', sans-serif;}
+        .jobs, .nav, .footer{font-family: 'Lato', sans-serif;}
         .tern{background-color: #B2456E; color: #FBEAE7; padding: 10px}
         .thursdayboots{background-color: #FBEAE7; color: #552619; padding: 10px}
         .syracuse{background-color: #552619; color: #FBEAE7; padding: 10px}
@@ -48,7 +48,7 @@
         <a href="technical.html">Technical Projects</a>
         </div>
     </nav>
-    <h1 style="text-align: center">Technical Projects</h1>
+    <h1 style="text-align: center; font-family: 'Lato', sans-serif;">Technical Projects</h1>
     <div class="jobs">
     <div class="grid-item">
     <div class="tern">
