--- a/project7/home.html
+++ b/project7/home.html
@@ -21,7 +21,7 @@
         .grid-item {padding: 20px;font-size: 15px; text-align: center; background-color: #FBEAE7; padding: 10px; }
         .name {text-align: right; flex-wrap: wrap;}
         .paragraph {text-align: right;}
-        h1, .blurb, .end{font-family: 'Lato', sans-serif;}
+        h1, .blurb, .end, .nav{font-family: 'Lato', sans-serif;}
 
         @media only screen and (max-width: 1250px) 
     { 
