--- a/project7/home.html
+++ b/project7/home.html
@@ -12,7 +12,7 @@
         .nav {float: right;}
         .heading1 {float: right; display: flex; text-align: right;}
        /* .paragraph {float: right; display: flex; text-align: right;}*/
-       .end{max-width:100%; display: flex; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; flex-wrap: wrap;}
+       .footer{max-width:100%; display: flex; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; flex-wrap: wrap;}
         .letsconnect{text-align: left; margin: 150px}
         .contact{text-align: center; margin: 150px;}
         .social-links{text-align: right; margin: 150px;}
@@ -59,7 +59,7 @@
     </div>
 
     <footer>
-        <div class="end">
+        <div class="footer">
         <div class="letsconnect">
         <h2>Let's Connect!</h2>
         </div>
@@ -68,8 +68,8 @@
                 718-913-0894<br>
                 </div>
         <div class="social-links">
-            <a href="https://www.linkedin.com/in/taylorjhuang/"><img src="../images/LI-In-Bug.png" alt ="linkedin" width="60" height="50"></a>
-            <a href="https://twitter.com/taylorjhuang"><img src="../project/pictures/twitter.png" alt ="twitter" width="60" height="50"></a>
+                <a href="https://www.linkedin.com/in/taylorjhuang/"><img src="../images/LI-In-Bug.png" alt ="linkedin" width="60" height="50"></a>
+                <a href="https://twitter.com/taylorjhuang"><img src="../project/pictures/twitter.png" alt ="twitter" width="60" height="50"></a>
             </div> 
             </div>
     
