--- a/project7/editorial.html
+++ b/project7/editorial.html
@@ -43,6 +43,7 @@
 </head>
 <body>
         <nav>
+        <h1 style="text-align: center; font-family: 'Lato', sans-serif;">Editorial Work</h1>
         <a href="home.html"><img src="../project/pictures/favicon.project.ico" alt ="logo"></a>
         <div class="nav">
             <a href="home.html">Home</a> <span>|</span>
