--- a/project7/home.html
+++ b/project7/home.html
@@ -45,6 +45,7 @@
         <a href="technical.html">Technical Projects</a>
     </div>
     </nav>
+    <h1 style="text-align: center; font-family: 'Lato', sans-serif;">About</h1>
     <div class ="blurb">
         <div class = "grid-item">
         <img class="banner" src="../images/banner.png" alt ="banner"></div>
