--- a/project7/home.html
+++ b/project7/home.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <style>
         .nav {float: right;}
-        .heading1 {float: right; display: flex; text-align: right;}
+        .heading1{display: flex; text-align: left; margin: 10px; margin-top: 10px;border-radius: 1em; padding: 20px; margin: 20px;}
        /* .paragraph {float: right; display: flex; text-align: right;}*/
        .footer{max-width:100%; display: flex; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; flex-wrap: wrap;}
         .letsconnect{text-align: left; margin: 150px}
@@ -21,7 +21,7 @@
         .grid-item {padding: 20px;font-size: 15px; text-align: center; background-color: #FBEAE7; padding: 10px; }
         .name {text-align: right; flex-wrap: wrap;}
         .paragraph {text-align: right;}
-        h1, .blurb, .end, .nav{font-family: 'Lato', sans-serif;}
+        .blurb, .end, .nav{font-family: 'Lato', sans-serif;}
 
         @media only screen and (max-width: 700px) 
     { 
