--- a/project7/home.html
+++ b/project7/home.html
@@ -32,7 +32,7 @@
         .blurb{display: grid; grid-template-columns: 100%; display: inline-grid; flex-wrap: wrap;}
         /*.blurb{text-align: right; flex-wrap: wrap; padding: 80px;}*/
         .name {max-width:100%; display: flex; flex-wrap: wrap;}
-        .banner{max-width: 100%}
+        .banner{max-width: 100%; background-color: #FBEAE7; padding: 10px;}
         .end{max-width:100%; display: flex; flex-wrap: wrap;}
     }
     </style>
