--- a/project7/home.html
+++ b/project7/home.html
@@ -29,7 +29,7 @@
         .name{text-align: right; flex-wrap: wrap;}
         span {display: none;}
         img a{max-width: 100%;}
-        .blurb{display: grid; grid-template-columns: 100%; display: inline-grid; flex-wrap: wrap;}
+        .blurb{display: inline-grid; grid-template-columns: 100%; flex-wrap: wrap;}
         /*.blurb{text-align: right; flex-wrap: wrap; padding: 80px;}*/
         .name {max-width:100%; display: flex; flex-wrap: wrap;}
         .banner{max-width: 100%; background-color: #FBEAE7; padding: 10px;}
