--- a/project7/home.html
+++ b/project7/home.html
@@ -29,10 +29,10 @@
         .name{text-align: right; flex-wrap: wrap;}
         span {display: none;}
         img a{max-width: 100%;}
-        .blurb{display: inline-grid; grid-template-columns: 100%; flex-wrap: wrap;}
+        .blurb{display: inline-grid; grid-template-columns: 100%; flex-wrap: wrap; margin: 10px}
         /*.blurb{text-align: right; flex-wrap: wrap; padding: 80px;}*/
         .name {max-width:100%; display: flex; flex-wrap: wrap;}
-        .banner{max-width: 100%; background-color: #FBEAE7; margin: 10px}
+        .banner{max-width: 100%; background-color: #FBEAE7;}
         .end{max-width:100%; display: flex; flex-wrap: wrap;}
     }
     </style>
