--- a/project7/home.html
+++ b/project7/home.html
@@ -49,7 +49,8 @@
     <h1 style="text-align: center; font-family: 'Lato', sans-serif;">About</h1>
     <div class ="blurb">
         <div class = "grid-item">
-        <img class="banner" src="../images/banner.png" alt ="banner"></div>
+        <div class = "banner">
+        <img class="banner" src="../images/banner.png" alt ="banner"></div></div>
     <!-- <div class="row2"> -->
         <div class = "grid-item"><div class="name"><aside><h1 style="text-align: right">Hi, I'm Taylor.</h1><br>
             <!-- <div class="paragraph">-->
