--- a/project7/home.html
+++ b/project7/home.html
@@ -32,7 +32,7 @@
         .blurb{display: inline-grid; grid-template-columns: 100%; flex-wrap: wrap;}
         /*.blurb{text-align: right; flex-wrap: wrap; padding: 80px;}*/
         .name {max-width:100%; display: flex; flex-wrap: wrap;}
-        .banner{max-width: 100%; text-align: left;}
+        .banner{max-width: 100%; text-align: left; border: 10px}
         .end{max-width:100%; display: flex; flex-wrap: wrap;}
     }
     </style>
