--- a/project7/home.html
+++ b/project7/home.html
@@ -17,8 +17,8 @@
         .contact{text-align: center; margin: 150px;}
         .social-links{text-align: right; margin: 150px;}
         .banner {max-width: 100%;}
-        .blurb {display: inline-grid; grid-template-columns: 50% 50%}
-        .grid-item {padding: 20px;font-size: 15px; text-align: center; background-color: #FBEAE7; padding: 10px; }
+        .blurb {display: inline-grid; grid-template-columns: 50% 50%; background-color: #FBEAE7;}
+        .grid-item {padding: 20px;font-size: 15px; text-align: center; padding: 10px; }
         .name {text-align: right; flex-wrap: wrap;}
         .paragraph {text-align: right;}
         .blurb, .end, .nav, .footer{font-family: 'Lato', sans-serif;}
@@ -32,7 +32,7 @@
         .blurb{display: inline-grid; grid-template-columns: 100%; flex-wrap: wrap;}
         /*.blurb{text-align: right; flex-wrap: wrap; padding: 80px;}*/
         .name {max-width:100%; display: flex; flex-wrap: wrap;}
-        .banner{flex-wrap: wrap;}
+        .banner{background-color: #FBEAE7; flex-wrap: wrap;}
         .end{max-width:100%; display: flex; flex-wrap: wrap;}
     }
     </style>
