--- a/project7/home.html
+++ b/project7/home.html
@@ -32,7 +32,6 @@
         .blurb{display: inline-grid; grid-template-columns: 100%; flex-wrap: wrap;}
         /*.blurb{text-align: right; flex-wrap: wrap; padding: 80px;}*/
         .name {max-width:100%; display: flex; flex-wrap: wrap;}
-        .banner{flex-wrap: wrap;}
         .end{max-width:100%; display: flex; flex-wrap: wrap;}
     }
     </style>
@@ -49,8 +48,7 @@
     <h1 style="text-align: center; font-family: 'Lato', sans-serif;">About</h1>
     <div class ="blurb">
         <div class = "grid-item">
-        <div class = "banner">
-        <img class="banner" src="../images/banner.png" alt ="banner"></div></div>
+        <img class="banner" src="../images/banner.png" alt ="banner"></div>
     <!-- <div class="row2"> -->
         <div class = "grid-item"><div class="name"><aside><h1 style="text-align: right">Hi, I'm Taylor.</h1><br>
             <!-- <div class="paragraph">-->
