--- a/project7/home.html
+++ b/project7/home.html
@@ -16,10 +16,10 @@
         .letsconnect{text-align: left; margin: 150px}
         .contact{text-align: center; margin: 150px;}
         .social-links{text-align: right; margin: 150px;}
-        .banner {max-width: 100%;}
+        .banner {max-width: 100%; background-color: #FBEAE7; padding: 10px}
         .blurb {display: inline-grid; grid-template-columns: 50% 50%; background-color: #FBEAE7;}
         .grid-item {padding: 20px;font-size: 15px; text-align: center; padding: 10px; }
-        .name {text-align: right; flex-wrap: wrap;}
+        .name {text-align: right; flex-wrap: wrap; background-color: #FBEAE7; padding: 10px}
         .paragraph {text-align: right;}
         .blurb, .end, .nav, .footer{font-family: 'Lato', sans-serif;}
 
@@ -48,7 +48,8 @@
     <h1 style="text-align: center; font-family: 'Lato', sans-serif;">About</h1>
     <div class ="blurb">
         <div class = "grid-item">
-        <img class="banner" src="../images/banner.png" alt ="banner"></div>
+        <div class="banner">
+        <img class="banner" src="../images/banner.png" alt ="banner"></div></div>
     <!-- <div class="row2"> -->
         <div class = "grid-item"><div class="name"><aside><h1 style="text-align: right">Hi, I'm Taylor.</h1><br>
             <!-- <div class="paragraph">-->
