--- a/project7/home.html
+++ b/project7/home.html
@@ -16,10 +16,10 @@
         .letsconnect{text-align: left; margin: 150px}
         .contact{text-align: center; margin: 150px;}
         .social-links{text-align: right; margin: 150px;}
-        .banner {max-width: 100%; background-color: #FBEAE7; padding: 10px}
+        .banner {max-width: 100%; background-color: #FBEAE7;}
         .blurb {display: inline-grid; grid-template-columns: 50% 50%; background-color: #FBEAE7;}
         .grid-item {padding: 20px;font-size: 15px; text-align: center; padding: 10px; }
-        .name {text-align: right; flex-wrap: wrap; background-color: #FBEAE7; padding: 10px}
+        .name {text-align: right; flex-wrap: wrap; background-color: #FBEAE7;}
         .paragraph {text-align: right;}
         .blurb, .end, .nav, .footer{font-family: 'Lato', sans-serif;}
 
