--- a/project7/editorial.html
+++ b/project7/editorial.html
@@ -26,9 +26,9 @@
         .social-links{float: right; margin: 150px}
         .img a{max-width: 100%; max-height: 100%;}
         .editorial, .footer, .nav{font-family: 'Lato', sans-serif;}
-        .mashed{background-color: #B2456E; color: #FBEAE7}
-        .hercampus{background-color:  #FBEAE7; color: #552619;}
-        .odyssey{background-color: #552619; color: #FBEAE7;}
+        .mashed{background-color: #B2456E; color: #FBEAE7; padding: 5px}
+        .hercampus{background-color:  #FBEAE7; color: #552619; padding: 5px}
+        .odyssey{background-color: #552619; color: #FBEAE7; padding: 5px}
         @media only screen and (max-width: 700px) 
     { 
         .nav a{max-width:100%; display: flex; background-color: #FBEAE7; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; }
