--- a/project7/home.html
+++ b/project7/home.html
@@ -29,6 +29,7 @@
         .name{text-align: right; flex-wrap: wrap;}
         span {display: none;}
         img a{max-width: 100%;}
+        .banner{display: auto}
         .blurb{display: inline-grid; grid-template-columns: 100%; flex-wrap: wrap;}
         /*.blurb{text-align: right; flex-wrap: wrap; padding: 80px;}*/
         .name {max-width:100%; display: flex; flex-wrap: wrap;}
