--- a/project7/home.html
+++ b/project7/home.html
@@ -29,7 +29,6 @@
         .name{text-align: right; flex-wrap: wrap;}
         span {display: none;}
         img a{max-width: 100%;}
-        .banner{display: auto}
         .blurb{display: inline-grid; grid-template-columns: 100%; flex-wrap: wrap;}
         /*.blurb{text-align: right; flex-wrap: wrap; padding: 80px;}*/
         .name {max-width:100%; display: flex; flex-wrap: wrap;}
@@ -52,7 +51,7 @@
         <div class="banner">
         <img class="banner" src="../images/banner.png" alt ="banner"></div></div>
     <!-- <div class="row2"> -->
-        <div class = "grid-item"><div class="name"><aside><h1 style="text-align: right">Hi, I'm Taylor.</h1><br>
+        <div class = "grid-item"><div class="name"><aside><h1>Hi, I'm Taylor.</h1><br>
             <!-- <div class="paragraph">-->
         In May 2023, I will be earning a dual degree from Syracuse University’s School of Information Studies and S.I. Newhouse School of Public Communications. I am studying information management and technology and magazine journalism, and my education helped shape me into a digital storyteller. I hope to apply both my technical and writing skills to opportunities that will make technology more accessible and digestible for diverse audiences. <br>
         Outside of my work I am a huge foodie and traveler, and I love staying active. Feel free to contact me at <a href="mailto:taylorjhuang@gmail.com">taylorjhuang@gmail.com.</a></aside>
