--- a/project7/home.html
+++ b/project7/home.html
@@ -16,10 +16,10 @@
         .letsconnect{text-align: left; margin: 150px}
         .contact{text-align: center; margin: 150px;}
         .social-links{text-align: right; margin: 150px;}
-        .banner {max-width: 100%; background-color: #FBEAE7;}
+        .banner {max-width: 100%;}
         .blurb {display: inline-grid; grid-template-columns: 50% 50%; background-color: #FBEAE7;}
         .grid-item {padding: 20px;font-size: 15px; text-align: center;}
-        .name {text-align: right; flex-wrap: wrap; background-color: #FBEAE7;}
+        .name {text-align: right; flex-wrap: wrap;}
         .paragraph {text-align: right;}
         .blurb, .end, .nav, .footer{font-family: 'Lato', sans-serif;}
 
@@ -51,7 +51,7 @@
         <div class="banner">
         <img class="banner" src="../images/banner.png" alt ="banner"></div></div>
     <!-- <div class="row2"> -->
-        <div class = "grid-item"><div class="name"><aside><h1>Hi, I'm Taylor.</h1><br>
+        <div class = "grid-item"><div class="name"><aside><h2>Hi, I'm Taylor.</h2><br>
             <!-- <div class="paragraph">-->
         In May 2023, I will be earning a dual degree from Syracuse University’s School of Information Studies and S.I. Newhouse School of Public Communications. I am studying information management and technology and magazine journalism, and my education helped shape me into a digital storyteller. I hope to apply both my technical and writing skills to opportunities that will make technology more accessible and digestible for diverse audiences. <br>
         Outside of my work I am a huge foodie and traveler, and I love staying active. Feel free to contact me at <a href="mailto:taylorjhuang@gmail.com">taylorjhuang@gmail.com.</a></aside>
